Styling and spacing corrected for iPad sizes.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,22 +66,10 @@ code {
 }
 
 @media screen and (min-width: 765px) {
-    .hero-container::before {
-        content: '';
-        background-color: #2f4858;
-        background-size: 50% 100%;
-        height: 150%;
-        width: 50%;
-        top: -50%;
-        position: absolute;
-        right: 0;
-        z-index: -11;
-    }
-
     .hero-bg-image {
         position: absolute;
-        top: -45%;
-        height: 155%;
+        top: 0%;
+        height: 100%;
         width: auto;
         z-index: -10;
         object-fit: cover;
@@ -90,11 +78,11 @@ code {
     }
 
     .hero-section-container {
-        height: 537px;
+        height: 710px;
     }
 
     .hero-img-container::before {
-        height: 111%;
+        height: 100%;
     }
 }
 
